--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "kwu-opensource-sw-team7",
   "main": "./main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": ""
   },
   "author": "",
   "license": "ISC",
