--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "kwu-op-sw-team7": "^0.0.1"
+    "body-parser": "^1.20.3",
+    "express": "^4.21.1",
+    "kwu-op-sw-team7": "^0.0.1",
+    "nodemon": "^3.1.7",
+    "selenium-webdriver": "^4.26.0"
   }
 }
