--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "express": "^4.21.1",
     "kwu-op-sw-team7": "^0.0.1",
     "nodemon": "^3.1.7",
-    "selenium-webdriver": "^4.26.0"
+    "selenium-webdriver": "^4.26.0",
+    "vue-router": "^4.4.5"
   },
   "devDependencies": {
     "@electron-forge/cli": "^7.5.0",
